--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                                 <h2>Making a difference since 2017</h2>
                                 <p align="justify" class="blue-dark">  "We Can! We Will!"</p>
                             </div>
-                            <p align="justify">We, the YUVA club of REC, means to create a platform for young professionals and entrepreneurs to engage in nation-building activities. We focus primarily on providing the youth and fellow people with opportunities for  </p>
+                            <p align="justify">We, the YUVA club of REC, aspire to create a platform for young professionals and entrepreneurs to engage in nation-building activities. We focus primarily on providing the youth and fellow people with opportunities for  </p>
                             <ul class="list-style-one">
                                 <li>Networking</li>
                                 <li>Leadership</li>
