--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <section class="about-area about-area-v1 position-relative pt-130">
             <div  class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-xl-6">
                         <div class="img-holder-box mb-50">
                             <div class=" wow fadeInLeft">
                                 <img style="border-radius:5%" src="assets/images/about/about-1.png" alt="Image">
@@ -183,7 +183,7 @@
                             
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-xl-6">
                         <div class="text-wrapper mb-50 wow fadeInRight">
                             <div class="section-title mb-15">
                                 <span class="sub-title st-one">About Us</span>
