--- a/Event - Redefining Red.html
+++ b/Event - Redefining Red.html
@@ -209,7 +209,8 @@
                     </div>
                 </div>
             </div>
-        </section><!--====== End Process Section ======-->
+        </section>
+        <!--====== End Process Section
         <section class="team-area team-area-v2">
             <div class="container">
                 <div class="row justify-content-center">
@@ -288,7 +289,7 @@
                     </div>                
                 </div>
             </div>
-        </section>
+        </section> ======-->
         <!--====== Start Portfolio Details section ======-->
         <section class="portfolio-details-section pb-90">
             <div class="container">
