--- a/Event - Road Revive.html
+++ b/Event - Road Revive.html
@@ -206,7 +206,8 @@
                     </div>
                 </div>
             </div>
-        </section><!--====== End Process Section ======-->
+        </section>
+        <!--====== End Process Section
         <section class="team-area team-area-v2">
             <div class="container">
                 <div class="row justify-content-center">
@@ -286,6 +287,7 @@
                 </div>
             </div>
         </section>
+         ======-->
         <!--====== Start Portfolio Details section ======-->
         <section class="portfolio-details-section pb-90">
             <div class="container">
@@ -328,7 +330,7 @@
                 </div>
             </div>
         </section><!--====== End Portfolio Details section ======-->
-        <!--=====Start Colab Section=====-->
+        <!--=====Start Colab Section
         <section class="team-area team-area-v2 pt-5 pb-70">
             <div class="container">
                 <div class="row justify-content-center">
@@ -354,7 +356,7 @@
                     
                 </div>
             </div>
-        </section><!--====== End Colab section ======-->
+        </section>End Colab section ======-->
         <!--====== Start Footer ======-->
        <footer class="footer-area page-footer light-gray-bg">
         <div class="container">
