--- a/Event - Smash.html
+++ b/Event - Smash.html
@@ -212,8 +212,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!--====== End Process Section
+        </section><!--====== End Process Section ======-->
         <section class="team-area team-area-v2">
             <div class="container">
                 <div class="row justify-content-center">
@@ -293,7 +292,6 @@
                 </div>
             </div>
         </section>
-         ======-->
         <!--====== Start Portfolio Details section ======-->
         <section class="portfolio-details-section pb-90">
             <div class="container">
