--- a/Event - Road Revive.html
+++ b/Event - Road Revive.html
@@ -206,8 +206,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!--====== End Process Section
+        </section><!--====== End Process Section ======-->
         <section class="team-area team-area-v2">
             <div class="container">
                 <div class="row justify-content-center">
@@ -287,7 +286,6 @@
                 </div>
             </div>
         </section>
-         ======-->
         <!--====== Start Portfolio Details section ======-->
         <section class="portfolio-details-section pb-90">
             <div class="container">
