--- a/Event - Cater the canines.html
+++ b/Event - Cater the canines.html
@@ -158,7 +158,7 @@
                                     <p align="justify" ><b>Cater the Canines: Nourishing Amiable
                                         Wagging Tails with Love:</b><br>
                                         
-                                        On a delightful day in Anna Nagar, an inspiring and heartwarming initiative called ”Cater the Canines” took place, organized by YI YUVA REC. The event aimed to spread abundance of love and care to our loyal and loving four-legged friends.The primary objective of this initiative was to provide stray dogs with care and nourish them with nutritious meals.Throughout the evening, the love and care poured out for the canines were evident.
+                                        On a delightful day in Anna Nagar, an inspiring and heartwarming initiative called ”Cater the Canines” took place, organized by Yi YUVA REC. The event aimed to spread abundance of love and care to our loyal and loving four-legged friends.The primary objective of this initiative was to provide stray dogs with care and nourish them with nutritious meals.Throughout the evening, the love and care poured out for the canines were evident.
                                         As the event drew to a close, a sense of
                                         fulfillment and satisfaction lingered in the air. ”Cater the Canines” had succeeded in its mission of spreading love and nourishment to these four-legged beings who hold a special place in our hearts. The
                                         
