--- a/Event - Dakshin22.html
+++ b/Event - Dakshin22.html
@@ -155,7 +155,7 @@
                                 <div class="text">
                                     <h3 class="title">CII Dakshin 2022</h3>
                                     <p class="position">09 April 2022 & 10 April 2022</p>
-                                    <p  align="justify">CII Dakshin 2022 - South India Film Summit, jointly organized by CII and YI, was a dazzling celebration of the region's film industry. Esteemed personalities like Rajamaouli, Jayamravi, and ARR added star power to the event, inaugurated with pride by the CM of Tamil Nadu. Aspiring filmmakers eagerly interacted with industry experts, gaining invaluable insights into their craft. Engaging panel discussions with accomplished actors and directors provided inspiration and knowledge to all attendees.
+                                    <p  align="justify">CII Dakshin 2022 - South India Film Summit, jointly organized by CII and Yi, was a dazzling celebration of the region's film industry. Esteemed personalities like Rajamaouli, Jayamravi, and ARR added star power to the event, inaugurated with pride by the CM of Tamil Nadu. Aspiring filmmakers eagerly interacted with industry experts, gaining invaluable insights into their craft. Engaging panel discussions with accomplished actors and directors provided inspiration and knowledge to all attendees.
 
                                         The event's success was fueled by the enthusiastic participation of student volunteers from various colleges, contributing to its smooth execution. Dakshin 2022 proved to be a fertile ground for creativity and collaboration, laying the foundation for the future of South Indian cinema.
                                         
