--- a/index.html
+++ b/index.html
@@ -145,27 +145,29 @@
             </div>
         </section><!--====== End Hero Section ======-->
             <!--======= Start Register Section ======-->
-<!--            <section class="cta-area cta-area-v1 pt-60">
+<            <section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450">
                     <div class="cta-wrapper dark-blue-bg">
                         <div class="row mt-50">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
                                 <div class="img-holder">
-                                    <img src="assets/images/register1.jpg" alt=""><a href="assets/images/register1.jpg" class="portfolio-hover img-popup"></a>  --> <!--change to assets/images/register.png-->
-<!--                             </div></div>
+                                    <img src="assets/images/register1.jpg" alt=""><a href="assets/images/register1.jpg" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                             </div></div>
                             <div class="col-xl-6 col-lg-6 mt-35">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
                                         <h2><span class="sub-title">Get Ready, Chennai!<br><br></span></h2>   <span class="fill-text"></span>
-                                        <h2 align="left"><span class="fill-text">Unleash your </span> inner talent <span class="fill-text"> and join us to </span> showcase your brilliance <span class="fill-text"> to the world!</span></h2>
+                                        <h2 align="left"><span class="fill-text">Join us to</span> Witness the  Talent Hub <span class="fill-text"> Of  </span> Chennai <span class="fill-text"> </span></h2>
+                                        <p>Namma <b>Chennai</b>. Namma <b>Pride</b>.</p>
                                     </div>
-                                    <a href="https://chennaiday.org/cgt/" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register for Free</a>
+                                    <a href="https://chennaiday.org/cgt/" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Let's Celebrate</a>
+                                    <!--<a href="https://chennaiday.org/cgt/" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register for Free</a>-->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>-->
+            </section>
             <!--======= End Register Section ======-->
         <!--====== Start About Section ======-->
         <section class="about-area about-area-v1 position-relative pt-130">
