--- a/Event - Road Revive.html
+++ b/Event - Road Revive.html
@@ -207,7 +207,7 @@
                 </div>
             </div>
         </section><!--====== End Process Section ======-->
-        <!-- <section class="team-area team-area-v2">
+        <section class="team-area team-area-v2">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -285,7 +285,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section> 
         <!--====== Start Portfolio Details section ======-->
         <section class="portfolio-details-section pb-90">
             <div class="container">
