--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="row mt-50">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
                                 <div class="img-holder">
-                                    <img src="assets/images/register1.jpg" alt=""><a href="assets/images/register1.jpg" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                                    <img src="assets/images/register1.png" alt=""><a href="assets/images/register1.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
                              </div></div>
                             <div class="col-xl-6 col-lg-6 mt-35">
                                 <div class="text-wrapper wow fadeInUp ml-15">
