--- a/Event - Redefining Red.html
+++ b/Event - Redefining Red.html
@@ -210,7 +210,7 @@
                 </div>
             </div>
         </section><!--====== End Process Section ======-->
-        <!-- <section class="team-area team-area-v2">
+        <section class="team-area team-area-v2">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -288,7 +288,7 @@
                     </div>                
                 </div>
             </div>
-        </section> -->
+        </section> 
         <!--====== Start Portfolio Details section ======-->
         <section class="portfolio-details-section pb-90">
             <div class="container">
