Update Event - Puzzles.html

--- a/Event - Puzzles.html
+++ b/Event - Puzzles.html
@@ -328,31 +328,8 @@
                     </div>
                 </div>
             </div>
-        </section><!--====== End Portfolio Details section ======-->
-        <!--=====Start Colab Section=====-->
-        <section class="team-area team-area-v2 pt-5 pb-70">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="section-title text-center wow fadeInUp">
-                            <span class="sub-title st-one">In Collaboration With</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-3 col-md-6 col-sm-1200">
-                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".2s">
-                            <div class="text text-center">
-                                <h4><br>Greater Chennai Police</h4>
-                                <p class="position">Chennai</p>
-                            </div>
-
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-        </section><!--====== End Colab section ======-->
+        </section>
+        <!--====== End Portfolio Details section ======-->
         <!--====== Start Footer ======-->
        <footer class="footer-area page-footer light-gray-bg">
         <div class="container">
