Update index.html br

--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
                             </div>
                             <div class="text">
                                 <h2 class="number"><span>17</span>+</h2>
-                                <p>Awards & Recognitions</p><br>
+                                <p>Awards & Recognitions</p>
                             </div>
                         </div>
                     </div>
