--- a/index.html
+++ b/index.html
@@ -145,23 +145,25 @@
             </div>
         </section><!--====== End Hero Section ======-->
             <!--======= Start Register Section ======-->
-<            <section class="cta-area cta-area-v1 pt-60">
+            <section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450">
                     <div class="cta-wrapper dark-blue-bg">
+                        <!-- <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   change to assets/images/register.png and duplicate membership template-->
                         <div class="row mt-50">
+                            <!-- <div class="col-xl-6 col-lg-6 mb-50">
+                                <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   \
+                            </div> -->
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
                                 <div class="img-holder">
-                                    <img src="assets/images/register1.png" alt=""><a href="assets/images/register1.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
-                             </div></div>
+                                    <img src="assets/images/Registration/Kick.png" alt=""><a href="assets/images/Registration/Kick.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                            </div></div>
                             <div class="col-xl-6 col-lg-6 mt-35">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
-                                        <h2><span class="sub-title">Get Ready, Chennai!<br><br></span></h2>   <span class="fill-text"></span>
-                                        <h2 align="left"><span class="fill-text">Join us to</span> Witness the  Talent Hub <span class="fill-text"> Of  </span> Chennai <span class="fill-text"> </span></h2>
-                                        <p>Namma <b>Chennai</b>. Namma <b>Pride</b>.</p>
+                                        <h2><span class="sub-title">The match awaits your entry!<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2 align="left"><span class="fill-text">Are you ready </span> to unshakle your skills <span class="fill-text"> on the field ?</span></h2>
                                     </div>
-                                    <a href="https://chennaiday.org/cgt/" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Let's Celebrate</a>
-                                    <!--<a href="https://chennaiday.org/cgt/" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register for Free</a>-->
+                                    <a href="https://forms.gle/kXAphpTNCBheRVHz8" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
                             </div>
                         </div>
@@ -171,18 +173,18 @@
             <!--======= End Register Section ======-->
         <!--====== Start About Section ======-->
         <section class="about-area about-area-v1 position-relative pt-130">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div style="display:grid;place-items:center;" class="col-lg-6 col-xl-6">
+            <div  class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-xl-6">
                         <div class="img-holder-box mb-50">
-                            <div class="wow fadeInLeft">
+                            <div class=" wow fadeInLeft">
                                 <img style="border-radius:5%" src="assets/images/about/about-1.png" alt="Image">
                             </div>
                             
                         </div>
                     </div>
                     <div class="col-lg-6 col-xl-6">
-                        <div class="text-wrapper mt-10 mb-50 wow fadeInRight">
+                        <div class="text-wrapper mb-50 wow fadeInRight">
                             <div class="section-title mb-15">
                                 <span class="sub-title st-one">About Us</span>
                                 <h2>Making a difference since 2017</h2>
@@ -254,7 +256,7 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2 cat-5">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/redefining red.jpg" alt="Img">
@@ -382,7 +384,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-8 cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".6s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/theuntoldstory.jpg" alt="Img">
@@ -591,7 +593,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2 cat-5">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/pavithram.jpg" alt="Img">
@@ -849,7 +851,7 @@
                             </div>
                             <div class="text">
                                 <h2 class="number"><span>17</span>+</h2>
-                                <p>Awards & Recognitions</p>
+                                <p>Awards & Recognitions</p><br>
                             </div>
                         </div>
                     </div>
@@ -877,9 +879,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!--====== End Counter Section ======-->
-        <!-- <section class="testimonial-area testimonial-area-v1 dark-blue-bg pattern-bg pt-130 pb-5">
+        </section><!--====== End Counter Section ======-->
+        <section class="testimonial-area testimonial-area-v1 dark-blue-bg pattern-bg pt-130 pb-5">
             <div class="shape-img wow fadeInRight animate-float-y"><span><img src="assets/images/testimonial/img-3.jpg" alt=""></span></div>
             <div class="container">
                 <div class="row">
@@ -976,7 +977,7 @@
                                 </div>
                                 <div style="width:3%"></div>
                             </div>
-                        </div>     -->
+                        </div>
                         <!--
                         <div class="testimonial-item">
                             <div class="testimonial-content row">
@@ -996,10 +997,10 @@
                                 </div>
                             </div>
                         </div> -->
-<!--                    </div>
+                    </div>
                 </div>
             </div>
-            </section> -->
+            </section>
         <!--====== End Testimonial Section ======-->
         <!--====== Start Instafeed Section ======-->
         <div class="container mt-60">
