--- a/Event - Addiction prevention.html
+++ b/Event - Addiction prevention.html
@@ -36,7 +36,7 @@
             <div class="about-us">
                 <h5 class="panel-widget-title">About Us</h5>
                 <p align="justify">
-                    We passionately orchestrate various events, workshops, and  initiatives that foster a profound culture of community service, ignite entrepreneurial prowess, and present awareness campaigns. Our relentless pursuit of empowering students, harnesses their potential to create a transformative impact on society. Together, we forge a future where their actions become a crescendo of positive impact, best benifitting the society.
+                    We passionately orchestrate various events, workshops, and  initiatives that foster a profound culture of community service, ignite entrepreneurial prowess, and present awareness campaigns. Our relentless pursuit of empowering students, harnesses their potential to create a transformative impact on society. Together, we forge a future where their actions become a crescendo of positive impact, best benefitting the society.
                 </p>
             </div>
             <div class="contact-us">
@@ -73,15 +73,6 @@
                         <div class="nav-menu">
                             <!-- Navbar Close -->
                             <div class="navbar-close"><i class="far fa-times"></i></div>
-                            <!-- Nav Search -->
-                            <div class="nav-search">
-                                <form>
-                                    <div class="form_group">
-                                        <input type="email" class="form_control" placeholder="Search Here" name="email" required>
-                                        <button class="search-btn"><i class="fas fa-search"></i></button>
-                                    </div>
-                                </form>
-                            </div>
                             <!-- Main Menu -->
                             <nav class="main-menu">
                                 <ul>
