--- a/Initiatives.html
+++ b/Initiatives.html
@@ -36,7 +36,7 @@
                 <div class="about-us">
                     <h5 class="panel-widget-title">About Us</h5>
                     <p align="justify">
-                        We passionately orchestrate various events, workshops, and initiatives that foster a profound culture of community service, ignite entrepreneurial prowess, and present awareness campaigns. Our relentless pursuit of empowering students, harnesses their potential to create a transformative impact on society. Together, we forge a future where their actions become a crescendo of positive impact, best benifitting the society.
+                        We passionately orchestrate various events, workshops, and initiatives that foster a profound culture of community service, ignite entrepreneurial prowess, and present awareness campaigns. Our relentless pursuit of empowering students, harnesses their potential to create a transformative impact on society. Together, we forge a future where their actions become a crescendo of positive impact, best benefitting the society.
                     </p>
                 </div>
                 <div class="contact-us">
@@ -73,15 +73,6 @@
                         <div class="nav-menu">
                             <!-- Navbar Close -->
                             <div class="navbar-close"><i class="far fa-times"></i></div>
-                            <!-- Nav Search -->
-                            <div class="nav-search">
-                                <form>
-                                    <div class="form_group">
-                                        <input type="email" class="form_control" placeholder="Search Here" name="email" required>
-                                        <button class="search-btn"><i class="fas fa-search"></i></button>
-                                    </div>
-                                </form>
-                            </div>
                             <!-- Main Menu -->
                             <nav class="main-menu">
                                 <ul>
@@ -140,6 +131,15 @@
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <div class="container">
                 <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section-title mb-45 wow fadeInUp">
+                            <span class="sub-title st-one">Our Works</span>
+                            <h2>Prior Initiatives</h2>
+                            <p>Creating Greater Impacts for a Better Tomorrow</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-12">
                         <div class="portfolio-filter-button mb-50 wow fadeInLeft">
                             <ul class="filter-btn mb-20">
@@ -160,7 +160,55 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2 cat-5">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/adangamaru.jpg" alt="Img">
+                                <a href="Event - Adanga Maru.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Adanga Maru.html">Adanga Maru</a></h3>
+                                <a class="cat-link">21/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5 cat-8">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/walkalong.jpg" alt="Img">
+                                <a href="Event - Walk Along.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Walk Along.html">Walk Along</a></h3>
+                                <a class="cat-link">20/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/future3.0.jpg" alt="Img">
+                                <a href="Event - Future3.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Future3.0.html">The Future 3.0 Youth Conclave</a></h3>
+                                <a class="cat-link">07/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/redefining red.jpg" alt="Img">
@@ -288,7 +336,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-8 cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".6s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/theuntoldstory.jpg" alt="Img">
@@ -497,7 +545,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2 cat-5">
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/pavithram.jpg" alt="Img">
