--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="about-us">
                     <h5 class="panel-widget-title">About Us</h5>
                     <p align="justify">
-                        We passionately orchestrate various events, workshops, and  initiatives that foster a profound culture of community service, ignite entrepreneurial prowess, and present awareness campaigns. Our relentless pursuit of empowering students, harnesses their potential to create a transformative impact on society. Together, we forge a future where their actions become a crescendo of positive impact, best benifitting the society.
+                        We passionately orchestrate various events, workshops, and  initiatives that foster a profound culture of community service, ignite entrepreneurial prowess, and present awareness campaigns. Our relentless pursuit of empowering students, harnesses their potential to create a transformative impact on society. Together, we forge a future where their actions become a crescendo of positive impact, best benefitting the society.
                     </p>
                 </div>
                 <div class="contact-us">
@@ -88,8 +88,7 @@
                         </div>
                         <div class="nav-menu">
                             <!-- Navbar Close -->
-                            <div class="navbar-close"><i class="far fa-times"></i></div>
-                            <!-- Main Menu -->
+                            <div class="navbar-close"><i class="far fa-times"></i></div><!-- Main Menu -->
                             <nav class="main-menu">
                                 <ul>
                                     <li><a href="index.html" class="active nav-link">Home</a></li>
@@ -140,7 +139,7 @@
                             <a class="cat-link">WE CAN! WE WILL!</a>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6 mt-60 hero-img-two scene"><span data-depth=".2"><img src="assets/images/hero/hero-one-img-21.jpg" class="wow fadeInLeft" alt="hero image"></span></div>
+                    <div class="col-xl-6 col-lg-6 mt-60 hero-img-two scene"><span data-depth=".5"><img src="assets/images/hero/hero-one-img-21.jpg" class="wow fadeInLeft" alt="hero image"></span></div>
                 </div>
             </div>
         </section><!--====== End Hero Section ======-->
@@ -149,14 +148,15 @@
                 <div class="container-1450">
                     <div class="cta-wrapper dark-blue-bg">
                         <!-- <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   change to assets/images/register.png and duplicate membership template-->
-                        <div class="row mt-50">
+                        <div class="row mt-50 align-items-center">
                             <!-- <div class="col-xl-6 col-lg-6 mb-50">
                                 <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   \
                             </div> -->
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
                                 <div class="img-holder">
                                     <img src="assets/images/Registration/Kick.png" alt=""><a href="assets/images/Registration/Kick.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
-                            </div></div>
+                                </div>
+                            </div>
                             <div class="col-xl-6 col-lg-6 mt-35">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-55">
@@ -256,6 +256,58 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/adangamaru.jpg" alt="Img">
+                                <a href="Event - Adanga Maru.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Adanga Maru.html">Adanga Maru</a></h3>
+                                <a class="cat-link">21/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5 cat-8">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/walkalong.jpg" alt="Img">
+                                <a href="Event - Walk Along.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Walk Along.html">Walk Along</a></h3>
+                                <a class="cat-link">20/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/future3.0.jpg" alt="Img">
+                                <a href="Event - Future3.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Future3.0.html">The Future 3.0 Youth Conclave</a></h3>
+                                <a class="cat-link">07/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
