--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/adangamaru.jpg" alt="Img">
+                                <img src="assets/images/portfolio/adanga maru.jpg" alt="Img">
                                 <a href="Event - Adanga Maru.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -304,10 +304,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
@@ -932,7 +928,7 @@
                 </div>
             </div>
         </section><!--====== End Counter Section ======-->
-        <section class="testimonial-area testimonial-area-v1 dark-blue-bg pattern-bg pt-130 pb-5">
+       <!--<section class="testimonial-area testimonial-area-v1 dark-blue-bg pattern-bg pt-130 pb-5">
             <div class="shape-img wow fadeInRight animate-float-y"><span><img src="assets/images/testimonial/img-3.jpg" alt=""></span></div>
             <div class="container">
                 <div class="row">
@@ -1048,11 +1044,11 @@
                                     <p class="position">Senior Manager</p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div> 
                     </div>
                 </div>
             </div>
-            </section>
+            </section>-->
         <!--====== End Testimonial Section ======-->
         <!--====== Start Instafeed Section ======-->
         <div class="container mt-60">
@@ -1083,9 +1079,9 @@
                         <div class="widget social-widget mb-40 wow fadeInUp" data-wow-delay=".15s">
                             <h4 class="widget-title">Follow</h4>
                             <ul class="social-nav">
-                                <li><a href="https://www.instagram.com/yiciirec/"><i class="fab fa-instagram"></i>Instagram</a></li>
-                                <li><a href="https://youtube.com/@yiyuvarec6604"><i class="fab fa-youtube"></i>Youtube</a></li>
-                                <li><a href="https://www.facebook.com/youngindiansrec"><i class="fab fa-facebook"></i>Facebook</a></li>
+                                <li><a href="https://www.instagram.com/yiciirec/"><i class="fab fa-instagram"></i> Instagram</a></li>
+                                <li><a href="https://youtube.com/@yiyuvarec6604"><i class="fab fa-youtube"></i> Youtube</a></li>
+                                <li><a href="https://www.facebook.com/youngindiansrec"><i class="fab fa-facebook"></i> Facebook</a></li>
                             </ul>
                         </div>
                     </div>
@@ -1097,10 +1093,8 @@
                             <div class="img-holder"><br>
                                 <img src="assets/images/logo/logo-2.png" alt="">
                             </div>
-                            
                         </div>
                     </div>
-                    
                 </div>
             </div>
             <div class="footer-copyright">
