--- a/Initiatives.html
+++ b/Initiatives.html
@@ -163,7 +163,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/adangamaru.jpg" alt="Img">
+                                <img src="assets/images/portfolio/adanga maru.jpg" alt="Img">
                                 <a href="Event - Adanga Maru.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
