--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/adanga maru.jpg" alt="Img">
+                                <img src="assets/images/portfolio/adanga maru.JPG" alt="Img">
                                 <a href="Event - Adanga Maru.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -275,7 +275,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5 cat-8">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/walkalong.jpg" alt="Img">
+                                <img src="assets/images/portfolio/walkalong.JPG" alt="Img">
                                 <a href="Event - Walk Along.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
