--- a/Initiatives.html
+++ b/Initiatives.html
@@ -163,7 +163,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/adanga maru.jpg" alt="Img">
+                                <img src="assets/images/portfolio/adanga maru.JPG" alt="Img">
                                 <a href="Event - Adanga Maru.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -179,7 +179,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-5 cat-8">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/walkalong.jpg" alt="Img">
+                                <img src="assets/images/portfolio/walkalong.JPG" alt="Img">
                                 <a href="Event - Walk Along.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -766,6 +766,67 @@
                         <div class="text">
                             <h3 class="title"><a href="Event - Ascensions.html">Ascensions</a></h3>
                             <a class="cat-link">25/10/2020</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section><!--====== End Portfolio Section ======-->
+        <!--====== Start Counter Section ======-->
+        <section class="counter-area counter-area-v1 pb-90">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <div class="section-title text-center mb-55 wow fadeInUp">
+                            <span class="sub-title st-one">Statistics</span>
+                            <h2>Our Profile</h2>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="icon">
+                                <i class="flaticon-technical-support"></i>
+                            </div>
+                            <div class="text">
+                                <h2 class="number"><span>6</span>+</h2>
+                                <p>Years of Impacting Lives</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".4s">
+                            <div class="icon">
+                                <i class="flaticon-medal"></i>
+                            </div>
+                            <div class="text">
+                                <h2 class="number"><span>17</span>+</h2>
+                                <p>Awards & Recognitions</p><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="icon">
+                                <i class="flaticon-start-up"></i>
+                            </div>
+                            <div class="text">
+                                <h2 class="number"><span>65</span>+</h2>
+                                <p>Successful Endeavors</p><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="counter-item mb-40 wow fadeInUp" data-wow-delay=".3s">
+                            <div class="icon">
+                                <i class="flaticon-creativity"></i>
+                            </div>
+                            <div class="text">
+                                <h2 class="number"><span>700</span>+</h2>
+                                <p>Hands on Board</p><br>
+                            </div>
                         </div>
                     </div>
                 </div>
