--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
         <!--====== Start About Section ======-->
         <section class="about-area about-area-v1 position-relative pt-130">
             <div  class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 col-xl-6">
+                <div class="row justify-content-center">
+                    <div style="display:grid;place-items:center;" class="col-lg-6 col-xl-6">
                         <div class="img-holder-box mb-50">
                             <div class=" wow fadeInLeft">
                                 <img style="border-radius:5%" src="assets/images/about/about-1.png" alt="Image">
