--- a/about.html
+++ b/about.html
@@ -287,7 +287,7 @@
                             </div>
                             <div class="text text-center">
                                 <h4><br>Mr. Srivas Anantharaman</h4>
-                                <p class="position">Yi Chennai Co-Chair</p>
+                                <p class="position">Yi Chennai Co Chair</p>
                             </div>
                         </div>
                     </div>
