--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -252,6 +252,18 @@
                     <div class="testimonial-item mb-55 wow fadeInUp">
                         
                         <div class="testimonial-content">
+                            <p>YUVA REC members were awarded and acknowlegded for our graceful dance performance and our active participation and assistance in the huge event Chennai Got Talent 4.0 held on August 25,2023.<br><br><br></p>
+                            <div class="author-quote-title d-flex">
+                                <div class="author-title">
+                                    <h4>Yuva College with Great Impact</h4>
+                                    <p class="position">2021</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-item mb-55 wow fadeInUp">
+                        
+                        <div class="testimonial-content">
                             <p>YUVA REC achieved the esteemed distinction of being named the "Best Innovative College of the Year" at the Yi Annual Day 2022. Furthermore, our diligent design team for the year 2021-2022 proudly presented their masterpiece, the book titled 'Why Yi,' which was unveiled during the same momentous event.</p>
                             <div class="author-quote-title d-flex">
                                 <div class="author-title">
