Update Achievements and recognitions.html

--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -255,7 +255,7 @@
                             <p>YUVA REC members were awarded and acknowlegded for our graceful dance performance and our active participation and assistance in the huge event Chennai Got Talent 4.0 held on August 25,2023.<br><br><br></p>
                             <div class="author-quote-title d-flex">
                                 <div class="author-title">
-                                    <h4>Yuva College with Great Impact</h4>
+                                    <h4>Great Support in CGT 4.0</h4>
                                     <p class="position">2021</p>
                                 </div>
                             </div>
@@ -279,7 +279,7 @@
                             <p>YUVA REC members were honored by the esteemed Yi (Young Indians) organization, acknowledging their outstanding contributions and awarding them the esteemed "Yuva College with Great Impact" recognition.<br><br><br></p>
                             <div class="author-quote-title d-flex">
                                 <div class="author-title">
-                                    <h4>Yuva College with Great Impact</h4>
+                                    <h4>YUVA College with Great Impact</h4>
                                     <p class="position">2021</p>
                                 </div>
                             </div>
