--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -252,7 +252,7 @@
                     <div class="testimonial-item mb-55 wow fadeInUp">
                         
                         <div class="testimonial-content">
-                            <p>YUVA REC members were awarded and acknowlegded for the graceful dance performance by our most talented Rugged REC team and our active participation and assistance in the huge event Chennai Got Talent 4.0 held on August 25,2023.<br><br><br></p>
+                            <p>YUVA REC members were awarded and acknowlegded for the graceful dance performance by our most talented Rugged REC team and our active participation and assistance in the huge event Chennai Got Talent 4.0 held on August 25, 2023.<br><br></p>
                             <div class="author-quote-title d-flex">
                                 <div class="author-title">
                                     <h4>Best Supportive YUVA College</h4>
