--- a/Initiatives.html
+++ b/Initiatives.html
@@ -163,6 +163,22 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
+                                <img src="assets/images/portfolio/adchennaigottalent4.0.JPG" alt="Img">
+                                <a href="Event - Chennai got talent 4.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Chennai got talent 4.0.html">Chennai Got Talent 4.0</a></h3>
+                                <a class="cat-link">25/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
                                 <img src="assets/images/portfolio/adanga maru.JPG" alt="Img">
                                 <a href="Event - Adanga Maru.html" class="portfolio-hover">
                                     <div class="hover-content">
@@ -469,14 +485,14 @@
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".1s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/chennaigottalent.jpg" alt="Img">
-                            <a href="Event - Chennai got talent.html" class="portfolio-hover ">
+                            <a href="Event - Chennai got talent 3.0.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
                             </a>
                         </div>
                         <div class="text">
-                            <h3 class="title"><a href="Event - Chennai got talent.html">Chennai Got Talent 3.0</a></h3>
+                            <h3 class="title"><a href="Event - Chennai got talent 3.0.html">Chennai Got Talent 3.0</a></h3>
                             <a class="cat-link">16/08/2022</a>
                         </div>
                     </div>
