--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/adchennaigottalent4.0.JPG" alt="Img">
+                                <img src="assets/images/portfolio/chennaigottalent4.0.JPG" alt="Img">
                                 <a href="Event - Chennai got talent 4.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -307,6 +307,22 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
+                                <img src="assets/images/portfolio/future youth.jpg" alt="Img">
+                                <a href="Event - Future youth.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Future youth.html">The Future 3.0 Youth Conclave</a></h3>
+                                <a class="cat-link">07/08/2023</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-column cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
+                            <div class="img-holder">
                                 <img src="assets/images/portfolio/future3.0.jpg" alt="Img">
                                 <a href="Event - Future3.0.html" class="portfolio-hover">
                                     <div class="hover-content">
@@ -315,8 +331,8 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Future3.0.html">The Future 3.0 Youth Conclave</a></h3>
-                                <a class="cat-link">07/08/2023</a>
+                                <h3 class="title"><a href="Event - Future3.0.html">The Future 3.0 Inaugural Session</a></h3>
+                                <a class="cat-link">05/08/2023</a>
                             </div>
                         </div>
                     </div>
